--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/Bot.ts"
+    "build": "tsc",
+    "production": "set NODE_ENV=production&&yarn build&&node dist/Bot.js",
+    "development": "set NODE_ENV=development&&ts-node src/Bot.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,12 +17,13 @@
     "@typescript-eslint/parser": "^5.21.0",
     "discord-api-types": "^0.32.0",
     "discord.js": "^13.6.0",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "typescript-compiler": "^1.4.1-2"
   },
   "devDependencies": {
     "@types/node": "^17.0.29",
     "eslint": "^8.14.0",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.4"
   }
 }
